# MEC

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  mec.sublime-project  mec.sublime-workspace  x  xenomai.wrappers
eigenharp/: CMakeLists.txt
eigenharp/eigenfreed/: eigenfreed.h
eigenharp/eigenfreed/src/: ef_alpha.cpp  ef_harp.cpp  ef_pico.cpp  eigenapi.cpp  eigenfreed.cpp  eigenfreed_impl.h
eigenharp/lib_alpha2/: alpha2_active.h  alpha2_exports.h  alpha2_passive.h
eigenharp/lib_alpha2/src/: alpha2_passive.cpp
eigenharp/lib_pico/src/: pico_active.cpp
eigenharp/lib_picodecoder/: CMakeLists.txt  pico_decoder.c
eigenharp/picross/: pic_atomic.h  pic_backtrace.h  pic_error.h  pic_exports.h  pic_fastalloc.h  pic_float.h  pic_functor.h  pic_ilist.h  pic_log.h  pic_nocopy.h  pic_resources.h  pic_safeq.h  pic_stdint.h  pic_stl.h  pic_strbase.h  pic_thread_posix.h  pic_thread_win32.h  pic_tool.h  pic_usb.h  pic_windows.h  pic_winloop.h
eigenharp/picross/src/: pic_cfrunloop.cpp  pic_error.cpp  pic_power_macosx.mm  pic_safeq.cpp  pic_thread_posix.cpp  pic_tool_macosx.cpp  pic_usb_generic.cpp  pic_usb_linux.cpp  pic_usb_macosx.cpp  pic_winloop.cpp  usb_serial.cpp
eigenharp/resources/: pico_decoder.h
eigenharp/tests/: CMakeLists.txt  a2dump.cpp  picodump.cpp
mec/: CMakeLists.txt  eigen_cmd.cpp  mec.cpp  mec.h  mec_prefs.cpp  mec_prefs.h  mecapi_cmd.cpp  midi_cmd.cpp  midi_output.cpp  midi_output.h  osc_cmd.cpp  push2_cmd.cpp  soundplane_cmd.cpp  soundplane_tt_cmd.cpp  surfacemapper.cpp  surfacemapper.h  voice.h
mec-api/: CMakeLists.txt  mec_api.cpp  mec_api.h  mec_device.h  mec_eigenharp.cpp  mec_log.h  mec_midi.cpp  mec_midi.h  mec_msg_queue.cpp  mec_msg_queue.h  mec_prefs.cpp  mec_prefs.h  mec_scaler.cpp  mec_scaler.h  mec_surface.cpp  mec_surface.h  mec_surfacemapper.cpp  mec_surfacemapper.h  mec_voice.h
mec-api/devices/: mec_eigenharp.cpp  mec_eigenharp.h  mec_electraone.cpp  mec_electraone.h  mec_fates.cpp  mec_fates.h  mec_kontrol.cpp  mec_kontrol.h  mec_kontroldevice.cpp  mec_kontroldevice.h  mec_midi.cpp  mec_midi.h  mec_mididevice.cpp  mec_mididevice.h  mec_morph.cpp  mec_morph.h  mec_nui.cpp  mec_nui.h  mec_oscdisplay.cpp  mec_oscdisplay.h  mec_osct3d.cpp  mec_osct3d.h  mec_push2.cpp  mec_push2.h  mec_push2_param.cpp  mec_push2_param.h  mec_soundplane.cpp  mec_soundplane.h
mec-api/devices/eigenharp/: CMakeLists.txt
mec-api/devices/eigenharp/lib_alpha2/: alpha2_reg.h  alpha2_usb.h
mec-api/devices/eigenharp/lib_pico/: pico_active.h  (+3 more)
mec-api/devices/electraone/: SysExStream.h  e1_basemode.cpp  e1_basemode.h  e1_main.cpp  e1_main.h  e1_menu.cpp  e1_menu.h  e1_param.cpp  e1_param.h
mec-api/devices/morph/: Instrument.cpp  Instrument.h  morph_constants.h
mec-api/devices/nui/: nui_basemode.cpp  nui_basemode.h  nui_menu.cpp  nui_menu.h  nui_param_1.cpp  nui_param_1.h  nui_param_2.cpp  nui_param_2.h
mec-api/devices/push2/: CMakeLists.txt  mec_push2_device.cpp  mec_push2_device.h  mec_push2_module.cpp  mec_push2_module.h  mec_push2_param.cpp  mec_push2_param.h  mec_push2_play.cpp  mec_push2_play.h  mec_push2_preset.cpp  mec_push2_preset.h
mec-api/devices/soundplanelite/: CMakeLists.txt  Filters2D.h  MLAppState.h  MLDSP.h  MLModel.h  README.txt  SoundplaneDriver.h  SoundplaneMECOutput.h  Unpacker.h
mec-api/devices/soundplanelite2/: CMakeLists.txt  SoundplaneModel.cpp  SoundplaneModel.h
mec-api/processors/: mec_midi_processor.cpp  mec_midi_processor.h  mec_midiprocessor.cpp  mec_midiprocessor.h  mec_mpe_processor.cpp  mec_mpe_processor.h
mec-api/tests/: CMakeLists.txt  expr_mec.json  t_kontrol.cpp  t_scale.cpp  t_surface.cpp  t_voice.cpp  test.json
mec-app/: CMakeLists.txt  mec-app.cpp  mec.cpp  mec_app.cpp  mec_app.h  mecapi_cmd.cpp  midi_cmd.cpp  midi_output.cpp  midi_output.h  osc_cmd.cpp  push2_cmd.cpp  soundplane_tt_cmd.cpp
mec-app/archive/mec.old/: eigen_cmd.cpp  midi_cmd.cpp  midi_output.cpp
mec-app/tests/: mectest.maxpat  spmpe.pd
mec-kontrol/api/: CMakeLists.txt  ChangeSource.cpp  ChangeSource.h  Device.cpp  Device.h  Entity.cpp  Entity.h  KontrolModel.cpp  KontrolModel.h  Module.cpp  Module.h  OSCBroadcaster.cpp  OSCBroadcaster.h  OSCReceiver.cpp  OSCReceiver.h  ParamValue.cpp  ParamValue.h  Parameter.cpp  Parameter.h  ParameterModel.cpp  ParameterModel.h  Patch.cpp  Patch.h  Rack.cpp  Rack.h
mec-kontrol/pd/kontrolrack/: CMakeLists.txt  KontrolMonitor.cpp  KontrolMonitor.h  KontrolPosix.cpp  KontrolRack.cpp  KontrolRack.h  KontrolRack~-help.pd  KontrolRack~.cpp  KontrolRack~.h  KontrolWin.cpp  Makefile  dirent_win.cpp  dirent_win.h  kontrolrack-module.json
mec-kontrol/tests/: CMakeLists.txt  t_kontrol.cpp
mec-utils/: CMakeLists.txt  mec_log.h  mec_prefs.cpp  mec_prefs.h  mec_utils.cpp  mec_utils.h
mec.old/: CMakeLists.txt  mec.h
mec.old/tests/: mectest.pd
mec/archive/mec.old/: CMakeLists.txt  soundplane_cmd.cpp
mec/resources/: mec.json
mecapi/: CMakeLists.txt  mec_api.cpp  mec_api.h  mec_eigenharp.cpp  mec_eigenharp.h  mec_log.h  mec_msg_queue.cpp  mec_msg_queue.h  mec_prefs.cpp  mec_prefs.h  mec_soundplane.cpp  mec_soundplane.h  mec_surfacemapper.cpp  mec_surfacemapper.h  mec_voice.h
mecdemo/: CMakeLists.txt  mec.cpp  mec.h  mecapi_cmd.cpp  midi_output.cpp  midi_output.h  soundplane_tt_cmd.cpp
mecdemo/resources/: mec.json
push2/push2lib/: CMakeLists.txt  push2lib.cpp
push2/tests/: CMakeLists.txt
soundplanelite/: CMakeLists.txt  InertSoundplaneDriver.h  MLAppState.h  MLVector.h  SoundplaneDataListener.h  SoundplaneMECOutput.h  SoundplaneModel.h  SoundplaneModelA.h  SoundplaneOSCOutput.h  ThreadUtility.h  TouchTracker.h  Unpacker.h  Zone.h
soundplanelite/source/: Filters2D.cpp  LibusbSoundplaneDriver.cpp  LibusbSoundplaneDriver.h  MLAppState.cpp  MLSignal.cpp  MacSoundplaneDriver.cpp  MacSoundplaneDriver.h  SoundplaneMECOutput.cpp  SoundplaneModel.cpp  SoundplaneModelA.cpp
soundplanelite/source/neon/: MLSignal.cpp  MLVector.cpp  MLVector.h
soundplanelite/source/sse/: MLSignal.cpp  MLVector.cpp  MLVector.h
soundplanelite/tests/: CMakeLists.txt  soundplanetest.cpp  touchtrackertest.cpp
(+241 files in other folders)
