set(EIGENFREEDTEST_SRC "eigenfreedtest.cpp")
include_directories ("${PROJECT_SOURCE_DIR}/eigenharp")
add_executable(eigenfreed ${EIGENFREEDTEST_SRC})
target_link_libraries (eigenfreed eigenharplib picodecoder)
if(APPLE)
target_link_libraries(eigenfreed  "-framework CoreServices -framework CoreFoundation -framework IOKit -framework CoreAudio")
elseif(UNIX) 
target_link_libraries(eigenfreed  "libusb" "dl" "pthread")
endif(APPLE)

set(A2DUMP_SRC "a2dump.cpp")
include_directories ("${PROJECT_SOURCE_DIR}/eigenharp")
add_executable(a2dump ${A2DUMP_SRC})
target_link_libraries (a2dump eigenharplib picodecoder)
if(APPLE)
target_link_libraries(a2dump  "-framework CoreServices -framework CoreFoundation -framework IOKit -framework CoreAudio")
elseif(UNIX) 
target_link_libraries(a2dump  "libusb" "dl" "pthread")
endif(APPLE)

set(PICODUMP_SRC "picodump.cpp")
include_directories ("${PROJECT_SOURCE_DIR}/eigenharp")
add_executable(picodump ${PICODUMP_SRC})
target_link_libraries (picodump eigenharplib picodecoder)
if(APPLE)
target_link_libraries(picodump  "-framework CoreServices -framework CoreFoundation -framework IOKit -framework CoreAudio")
elseif(UNIX) 
target_link_libraries(picodump  "libusb" "dl" "pthread")
endif(APPLE)
